2 prelims pages are sent to another proof

--- a/parxkAshakaranudi.tex
+++ b/parxkAshakaranudi.tex
@@ -6,27 +6,27 @@ I nADina savaRtoVmuKa aBivaqdidhxge sharxmisi harasutitxruva dhAmiRka gurupiVTha
 
 \medskip
 
-sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshavxrana pArxthaRneya meVrege Adijagadugxru shirxV shivarAtirxVshavxra shivayoVgigaLavariMda saMsAthxpitavAda sutUtxru jagadugxru piVThada divayx paraMpareyalilx baMda mahAnuBAvarugaLu loVkakalAyxNakAkxgi avisamxraNiVya seVveyanenxsagutatx baMdirutAtxre. sAhitiyxka caTuvaTikegaLige visheVSavAda porxVtAsxhavaninxtatx I piVThAdhipatigaLalilx kelavaru sAhitayxloVkakekx amUlayxvAda koDugegaLanunx koTiTxdAdxre. `parama shivAdhikayx cUDAmaNi'ge vAyxKAyxnavanunx baredu, maleya mAdeVshavxrarige Asharxya niVDida sidadhxnaMja deVshikeVMdarxru; `amugi deVvayayxgaLa sAMgatayx'vanunx bareda kavi shivaliMga\-deVvanige perxVraka-poVSakarAda kapini naMjuMDa deVshikeVMdarxru; toVMTada sidadhxliMga yatigaLa shiSayxparxmuKaralilx obabxrAgi savxtaMtarx vacana\-kAra\-rAgiruva GanaliMga shivayoVgigaLu; `maMtarxmahaSiR'gaLenisi `shivamaMtarx mahime' garxMthavanunx racisida jagadugxru shirxV shivarAtirxVshavxra mahAsAvxmigaLu; `GanaliMgadeVvara vacanagaLu' matutx shirxV gwriVshaMkara mahAsAvxmigaLavara `akakxmahAdeVvi'\break caMpUkAvayx - ivugaLanunx saMsakxrisi, saMpAdisikoTaTxvarU, nADina kalAyxNavanenxsagidavarU, pArxtaHsamxraNiVyarU Ada paramapUjayx shirxVmanamxhArAja rAjagurutilaka jagadugxru DA. shirxV shivarAtirx rAjeVMdarx mahAsAvxmigaLavaru - ivareV modalAdavaru sAhitayx, saMsakxqqti\-gaLa poVSakarAgi kavigaLige, kalAvidarige, vidAvxMsarige AsharxyadAtarAgidAdxre. I piVThavu saMsAthxpisiruva dhAmiRka, sheYkaSxNika, sAhitiyxka hAgU sAMsakxqqtika saMsethxgaLalilx jagadugxru shirxV shivarAtirxVshavxra garxMtha\-mAleyU oMdu. sumAru 300kUkx hecucx mwlika garxMthagaLanunx parxkaTisiruva I mAleyalilx Iga \textbf{``shivapada ratanxkoVsha''}veMba mahatavxda kaqti parxkaTavAgutitxruvudu saMtoVSada saMgati.
+sumAru sAvira vaSaRgaLa hiMde coVLacakerxVshavxrana pArxthaRneya meVrege Adijagadugxru shirxV shivarAtirxVshavxra shivayoVgigaLavariMda saMsAthxpitavAda sutUtxru jagadugxru piVThada divayx paraMpareyalilx baMda mahAnuBAvarugaLu loVkakalAyxNakAkxgi avisamxraNiVya seVveyanenxsagutatx baMdidAdxre. sAhitayxka caTuvaTikegaLige visheVSa porxVtAsxhavaninxtatx I piVThAdhipatigaLalilx kelavaru sAhitayxloVkakekx amUlayxvAda koDugegaLanunx koTiTxdAdxre. `parama shivAdhikayx cUDAmaNi'ge vAyxKAyxnavanunx baredu, maleya mAdeVshavxrarige Asharxya niVDida sidadhxnaMja deVshikeVMdarxru; `amugi deVvayayxgaLa sAMgatayx'vanunx bareda kavi shivaliMga\-deVvanige perxVraka-poVSakarAda kapini naMjuMDa deVshikeVMdarxru; toVMTada sidadhxliMga yatigaLa samakAliVnarAgi savxtaMtarx vacana\-kAra\-rAda GanaliMga shivayoVgigaLu; `maMtarxmahaSiR'gaLenisi `shivamaMtarx mahime' garxMthavanunx racisida jagadugxru shirxV shivarAtirxVshavxra mahAsAvxmigaLu; `GanaliMgadeVvara vacanagaLu' matutx shirxV gwriVshaMkara mahAsAvxmigaLavara `akakxmAdeVvi'\break caMpUkAvayx ivugaLanunx saMsakxrisi, saMpAdisikoTaTxvarU, nADina kalAyxNavanenxsagidavarU, pArxtaHsamxraNiVyarU Ada paramapUjayx shirxVmanamxhArAja rAjagurutilaka jagadugxru DA. shirxV shivarAtirx rAjeVMdarx mahAsAvxmigaLavaru - ivareV modalAdavaru sAhitayx, saMsakxqqti\-gaLa poVSakarAgi kavigaLige, kalAvidarige, vidAvxMsarige AsharxyadAtarAgidAdxre. I piVThavu saMsAthxpisiruva dhAmiRka, sheYkaSxNika, sAhitayxka hAgU sAMsakxqqtika saMsethxgaLalilx jagadugxru shirxV shivarAtirxVshavxra garxMtha\-mAleyU oMdu. sumAru 300kUkx hecucx mwlika garxMthagaLanunx parxkaTisiruva I mAleyalilx Iga \textbf{``shivapada ratanxkoVsha''}veMba mahatavxda kaqti parxkaTavAgutitxruvudu saMtoVSada saMgati.
 
 \medskip
 
-I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda \underline{\qquad} ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx hAjaridadx halavu jana vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru, aSeTxV alalx, tiMgaLoLagAgi maMjUrAtiyanUnx horaDisikoTaTxru. saMsakxqqti matutx\break vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxge nAvu mukatxkaMThada shAlxGane salilxsabayasutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf yoVjaneV Agi rUpugoMDitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgitutx. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhigata padagaLanUnx - aLavaDisikoMDitu, idara vivaragaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda nAvu ililx matetx adanunx heVLabayasuvudilalx. iMthadoMdu mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
+I kaqtiya mUla AkaravenanxbahudAda ``viVrasheYva pAriBASika padakoVsha'' saMsakxqqta garxMthavu namamx saMsethxyiMda \underline{\qquad} ralilx parxkaTavAyitu. kanARTaka sakARrada aMdina kananxDa matutx saMsakxqqti sacivarAda mAnayx shirxV goVviMda kArajoVLara adhayxkaSxte\-yalilx beMgaLUrinalilx naDeda kaqti biDugaDe samAraMBadalilx upasithxtaridadx halavAru vidAvxMsaru I mwlika kaqtiya kananxDa anuvAda \hbox{tutARgi} AgabeVkeMdu otAtxyisidaru. avara pirxVtipUvaRka Agarxhakekx sapxMdisida mAnayx sacivaru ilAKeyiMda agatayx anudAna\break niVDuvudAgi sathxLadalilxyeV GoVSisidaru, aSeTxV alalx, tiMgaLoLagAgi maMjUrAti AdeVshavanUnx horaDisikoTaTxru. saMsakxqqti matutx\break vidavxtitxna kelasagaLa kuritaMte shirxV kArajoVLara I Asakitxyanunx nAvu mukatxkaMThadiMda shAlxgisutetxVve. hiVge modalige anuvAdaveMdu pArxraMBavAda I kAyaR tananx savxrUpa, vAyxpitxgaLanunx visatxrisikoMDu hosadoMdu baqhatf yoVjaneye Agi rUpu taLeyitu. mUlada kaqtiyu saMsakxqqta AgamagaLige bahuteVka niSaThxvAgidadxre. I hosa kaqtiyu kananxDa viVrasheYva kAvayxgaLu matutx vacanagaLanUnx - kelavu veVLe aparUpada rUDhiya padagaLanUnx - aLavaDisikoMDitu. idara vivaragaLanunx kAyaR\-nivARhaka saMpAdaka DA. naMdiVshf haMceyavaru ``niveVdane''yalilx visAtxravAgi vivarisiruvudariMda matetx adaninxlilx heVLabayasuvudilalx. iMthadoMdu\break mahatAvxkAMkeSxya kaqti rUpugoLaLxlu sahakarisida saMpAdaka maMDaLiya elalx vidavxnamxNigaLige, vividha riVtiyalilx sAhitayxka sahAyavanunx niVDida vidAvxMsarige, pariNatarige matutx salahegArarige nAvu ABArigaLAgidedxVve.
 
 \medskip
 
-parxkaTaNa viBAgada mAji nideRVshakaru porx. ke.si. shivapapx, hAli nideVRshaka shirxV porx. morabada malilxkAjuRna, porx. \hbox{maleyUru}, gurusAvxmi, shirxV. Ti.pi. parxBusAvxmi, visheVSata. shirxV nagaleR shivakumArf avarige namamx kaqtajacnxtegaLu salulxtatxve. yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV shivashaMkarf matutx shirxV rAGaveVMdarx parxsAdf, muKapuTa vinAyxsakarAda\break shirxV maMjunAtha avara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
+parxkaTaNa viBAgada mAji nideRVshakarU shirxV ke.si. shivapapx, hAli nideVRshaka shirxV porx. morabada malilxkAjuRna, porx. \hbox{maleyUru} gurusAvxmi, shirxV Ti.pi. parxBusAvxmi, visheVSataH shirxV nagaleR shivakumArf avarige namamx kaqtajacnxtegaLu salulxtatxve. yoVjaneya DiTipi vinAyxsa matutx rUpureVSegaLanunx nivaRhisida shirxVraMga DijiTalf sAPfTxveVrf TekAnxlajiVsf muKayxsathxrAda porx. si.esf. \hbox{yoVgAnaMda}, avara sibabxMdivagaRda shirxV ajuRnf kashayxpf, shirxV shivashaMkarf matutx shirxV rAGaveVMdarx parxsAdf, muKapuTa vinAyxsakarAda\break shirxV maMjunAtha avara pirxVtipUvaRka sahAyakekx vaMdanegaLu.
 
 \medskip
 
-yoVjanege dhanasahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege - visheVSataH aMdu ilAKeya sacivarAgidadx iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige - aBimAnapUvaRka parxNAmagaLu.
+yoVjanege dhanasahAyavanonxdagisida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege - visheVSataH aMdu ilAKeya sacivarAgidadx, iMdu upa muKayxmaMtirxyAgiruva shirxV goVviMda kArajoVLarige - aBimAnapUvaRka parxNAmagaLu.
 
 \medskip
 
-I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx\break mahAsAvxmigaLavaru matutx vijayapura jAcnxnayoVgAsharxmada nirABAri caramUtiRgaLAda pUjayx shirxV sidedhxVshavxra sAvxmigaLavarige namamx gwravada maNihAravanunx salilxsabayasutetxVne.
+I yoVjaneya dhiVshakitx matutx kirxyAshakitxgaLAgi mAgaRdashaRna niVDida paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx\break mahAsAvxmigaLavaru matutx vijayapura jAcnxnayoVgAsharxmada nirABAri caramUtiRgaLAda pUjayx shirxV sidedhxVshavxra sAvxmigaLavarige namamx gwravada maNiharavanunx salilxsabayasutetxVne.
 
 \medskip
 
-I pusatxkavanunx suMdaravAgi mudirxsikoTiTxruva \underline{\qquad\qquad} ivarige vaMdanegaLu.
+I pusatxkavanunx atayxlapx kAladalilx suMdaravAgi mudirxsikoTiTxruva \underline{\qquad\qquad} ivarige namamx vaMdanegaLu.
 
 \vskip .3cm
 
