--- a/shubhasandesha.tex
+++ b/shubhasandesha.tex
@@ -6,24 +6,28 @@
 
 \bigskip
 
-jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata paMthagaLive. avugaLa naDuve aneVka BinanxtegaLive. sAmayx veYshiSaTxtegaLU ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare sahajiVvana. ``ayAyx eMdare savxgaR, elavoV eMdare naraka'' idu I manoV\-dhamaRda mUladhAtu. ililx bahu mata-paMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAnada rUpugoMDide. BArata sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx jana jiVvanada oMdu BAga. dhamaR janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka muMtAda saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretu hoVgide. ivu\-gaLanunx viMgaDisi noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
+jagatitxna bahumuKi saMsakxqqtige avakAsha kalipxsiruva rASaTxrXgaLalilx BArata agarxpaMkitxyalilx nilulxtatxde. ililx halavu dhamaRgaLive, halavu mata, paMthagaLive. avugaLa naDuve aneVka BinanxtegaLive. sAmayx veYshiSaTxtegaLU ive. Adare I elAlx dhamaR, mata, paMthagaLanunx besediruva oMdu aKaMDavAda maNisUtarxveMdare, ililxna janateya sahajiVvana. ``ayAyx eMdare savxgaR, elavoV eMdare naraka'' idu I manoV\-dhamaRda mUladhAtu. ililxna bahuteVka matapaMthagaLige kAraNa AyA kAlada manoVdhamaRkekx anuguNavAgi jiVvana\-vidhAnada rUpugoMDadedxV Agide. BAratada sAmAjika cariterxya adhayxyanaveMdare adu ililxna dhamaRgaLa, matapaMthagaLa kUlaMkaSa \hbox{adhayxyanaveMdeV} athaR. ililx dhamaR eMbudu yAvatUtx janajiVvanada oMdu aviBAjayx aMgavAgide. dhamaRvu janajiVvanavanunx parxBAvisida hAgeyeV janara baduku halavu veVLe dhamaRvanunx parxBAviside. I kAraNadiMdaleV BAratada cariterxyanunx atheRYsikoLuLxvudu savAlina kelasa. ililx \hbox{rAjakiVya}, AthiRka, sAmAjika, dhAmiRka saMgatigaLu tamage tAveV parxteyxVkavAgirade oMdaroLagoMdu beretuhoVgive. ivu\-gaLanunx viMgaDisi noVDuvAga atayxMta tALemx, jAgarUkate agatayx.
 
 \medskip
 
-parxtiyoMdu kula-mata-paMtha tananxdeV Ada dhAmiRka sAmAjika nuDigaTuTxgaLanunx saqSiTxsi koMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya sadAshaya kalapxne irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu baruvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx, tiLiyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavxpUNaRvAda matutx upayukatxvAda garxMtha eMbudaralilx saMshayavilalx. BAratadalilx iruva mata-dhamaRgaLa hinanxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva parxgatipara dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita catuvaNaRgaLu anaMtaradalilx jAtigaLAgi parivataRne hoMdidavu eMbudu \hbox{vidAvxMsara} aBimata. cAtuvaNaRvanunx biTuTx uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyx mAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRvanunx unanxtiVkarisi \textbf{ativaNARsharxma} eMba vishiSaTx parikalapxneyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa, eMba ciMtane beLedu baMdavu. iMtha aneVka veYshiSaTxpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
+parxtiyoMdu kula-mata-paMtha tananxdeV Ada dhAmiRka, sAmAjika nuDigaTuTxgaLanunx saqSiTxsikoMDirutatxde. aMtha nuDigaTiTxna hiMde oMdu iDiV paraMpareya AshayagaLu, kalapxnegaLu irutatxve. A kalapxne matutx AshayagaLanunx ariyade yAvudeV oMdu dhAmiRka vicAravanunx sAmAnayx athaRdalilx pariBAvisalu sAdhayxvAguvudilalx. I hinenxleyalilx viVrasheYva/liMgAyata dhamaRda pariBASe\-yanunx, nuDigaTuTxgaLanunx ariyuva saluvAgi I baqhatf pariBASAkoVshavanunx sidadhxpaDisalAgide. idoMdu mahatavxpUNaRvU upayukatxvU Ada garxMtha eMbudaralilx saMshayavilalx. BAratiVya matadhamaRgaLa hinenxleyalilx janakalAyxNa, loVkakalAyxNa\-vanunx bayasuva parxgatipara dhamaRveMdare adu viVrasheYva/liMgAyata dhamaR. vaqtitxya kushalate matutx samAjada munanxDegAgi veVdagaLa kAladalilx rUpugoMDa guNadhamARdhArita cAtuvaRNayx vayxvasethx hAgU naMtaradalilx jAtigaLAgi parivataRne hoMdidavu eMbudu \hbox{vidAvxMsara} aBimata. I nAlukx vaNaRgaLAce uLidavaranunx paMcamaru (aidaneyavaru) eMdu saMKAyxmAtarxvAgi gurutisalAgutitxtutx. Adare viVrasheYva/liMgAyata dhamaR I paMcamavagaRda parikalapxneyanunx unanxtiVkarisi\break \textbf{ativaNARsharxma} eMba vishiSaTx vayxvasethxyanunx rUpisitu. dAnada parikalapxneya sathxLadalilx dAsoVha, kAyakaveV keYlAsa eMba ciMtane beLedubaMdavu. iMtha aneVka veYshiSaTxyXpUNaR viVrasheYva-liMgAyata pariBASegaLanunx I garxMthavu vivarisutatxde.
 
 \medskip
 
-pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx taruva yoVjane idAgitutx. anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx paDedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe sUcanegaLanunx niVDidAdxre.
+pArxraMBadalilx jeesfesf garxMthamAleyu parxkaTisidadx saMsakxqqta BASeya viVrasheYva pAriBASika padakoVshavanunx kananxDakekx anuvAdisuva udedxVsha I yoVjaneyalilxtutx, anaMtara adu visAtxravAgi beLedu Iga I rUpavanunx taLedide. kaqtiya I baqhatitxgU mahatitxgU aneVkaru kAraNarAgidAdxre. pUjayx sidedhxVshavxra sAvxmiVjiyavaru AgAga agatayx salahe, sUcanegaLanunx DA. esf.\break vidAyxshaMkarf niVDidAdxre.
 
 \medskip
 
-hiriya vidAvxMsarugaLAda porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcalashAsitxrX,     DA. enf.esf. tAranAtha, DA. go.ru. cananxbasapapx, DA. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, DA. esf. vidAyxshaMkarf, shirxV enf. basavarAdhayx, porx. esf. naMjuMDayayx shirxV Arf.esf. pUNARnaMda DA. naMdiVshf haMce avarugaLu saMpAdaka maMDaLiyalilx aviratavAgi sharxmisi I niGaMTanunx rUpisidAdxre. avarelalxra sharxma ililx sAthaRkagoMDide.
+hiriya vidAvxMsarugaLAda porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf, DA. si. shivakumArasAvxmi, DA. esf. vidAyxshaMkarf, shirxV enf. basavArAdhayx, shirxV esf. naMjuMDayayx, shirxV Arf.esf. pUNARnaMda, DA. naMdiVshf haMce avarugaLu saMpAdaka maMDaLiyalilx aviratavAgi sharxmisi I niGaMTanunx rUpisidAdxre. avarelalxra sharxma ililx sAthaRkagoMDide.
 
 \medskip
 
-DA. naMdiVshf haMce I garxMthada saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe, padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiyanunx sidadhxte- hiVge niGaMTu racaneya elalx haMtagaLanunx kaThiNa parisharxma hAkidAdxre. idoMdu sharxmadAyaka kelasavAdarU pirxVti, sharxdedxyiMda mADidAdxre. I garxMtha elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
+DA. naMdiVshf haMce I garxMthada saMpUNaR javAbAdxriyanunx pArxraMBadiMdalU nivaRhisidAdxre. garxMthagaLa saMgarxhaNe,\break padagaLa saMgarxha, padagaLa saMkalana, karaDuparxtiya sidadhxte - hiVge niGaMTu racaneya elalx haMtagaLalUlx kaThiNa parisharxma hAkidAdxre. I sharxmadAyaka kelasavanunx pirxVti, sharxdedhxgaLiMda mADidAdxre. I garxMthavu elalxrigU doretu, vacanagaLa, viVrasheYva kAvayxgaLa vasutxniSaThx adhayxyanakekx neravAgaleMdu hAreYsutetxVve.
 
 \medskip
 
-I yoVjanege sahAyadhana niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivarAda hAgU iMdina upamuKayxmaMtirxgaLAda shirxV goVviMda kArajoVLa avarige oLitanunx hAreYsutetxVne.
+I yoVjanege sahAyadhana niVDida kananxDa matutx saMsakxqqti ilAKegU, anudAna niVDida aMdina sacivaru hAgU iMdina upamuKayxmaMtirxgaLu Ada shirxV goVviMda kArajoVLa avarige oLitanunx hAreYsutetxVve.
+
+\vskip 1cm
+
+\hfill {\large\bf sAvxmigaLu}
