correction work in progress

--- a/copyright.tex
+++ b/copyright.tex
@@ -1,14 +1,11 @@
 \thispagestyle{empty}
 \noindent
 {\rm\sf\bfseries SHIVAPADA RATNAKOSHA}\\[5pt]
-{\rm (Veerashaiva-Lingayata Samagra Paribhashika Padakosha)}\\[4pt]
-{\rm Prepared by Editorial Committe}\\[4pt]
-{\rm Published by JSS Granthamale, Mysuru.}
+{\rm (Veerashaiva-Lingayata Samagra Paribhashika Padakosha)}, {\rm Prepared by Editorial Committe}, {\rm Published by JSS Granthamale, Mysuru,} {\rm Pages : ????? + 896}
 
 \vspace{1cm}
 
 \noindent
-{\rm Pages : xxxiv--896}\\[7pt]
 {\rm \copyright \ Publishers}\\[7pt]
 {\rm First Edition : 2019}\\[7pt]
 {\rm No. of Copies : 1000}\\[7pt]
@@ -28,14 +25,11 @@
 
 \noindent
 {\bf\large shivapada ratanxkoVsha}\\[5pt]
-(viVrasheYva-liMgAyata samagarx pAriBASika padakoVsha)\\[5pt]
-saMpAdane : saMpAdaka samiti\\[4pt]
-parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru\\
+(viVrasheYva-liMgAyata samagarx pAriBASika padakoVsha), saMpAdane : saMpAdaka samiti, parxkaTaNe : je{esf}{esf} \ garxMthamAle, meYsUru, puTagaLu : {\rm ????? +} 896
 
 \vspace{1cm}
 
 \noindent
-puTagaLu : ????-?????\\[3pt]
 {\rm \copyright} parxkAshakaru\\[7pt]
 parxthama mudarxNa : 2019\\[7pt]
 parxtigaLu : 1000\\[10pt]
@@ -66,14 +60,14 @@ mudarxkaru : ????????
 \medskip
 
 {\fontsize{14pt}{16pt}\selectfont
-porx. ji.esf. sidadhxliMgayayx\\[7pt]
-DA. Ti.vi. veMkaTAcala shAsitxrXV\\[7pt]
-DA. esf. vidAyxshaMkara\\[7pt]
-DA. enf.esf. tArAnAtha\\[7pt]
-DA. ecf.vi. nAgarAjarAvf\\[7pt]
-DA. si. shivakumArasAvxmi\\[7pt]
-porx. esf. naMjuMDayayx\\[7pt]
-shirxV Arf.esf. pUNARnaMda\\[7pt]
+porx. ji.esf. sidadhxliMgayayx\\[8pt]
+DA. Ti.vi. veMkaTAcala shAsitxrXV\\[8pt]
+DA. esf. vidAyxshaMkara\\[8pt]
+DA. enf.esf. tArAnAtha\\[8pt]
+shirxV ecf.vi. nAgarAjarAvf\\[8pt]
+DA. si. shivakumArasAvxmi\\[8pt]
+shirxV esf. naMjuMDayayx\\[8pt]
+shirxV Arf.esf. pUNARnaMda\\[8pt]
 DA. naMdiVshf haMce (kAyaRnivARhaka saMpAdaka)}\relax
 \end{center}
 
