--- a/tex-for-print/anubandha-2.tex
+++ b/tex-for-print/anubandha-2.tex
@@ -1,5 +1,5 @@
 \begin{center}
-{\large\bf padasaMgarxha mADikoTiTxruva vidAvxMsarugaLa vivara}
+{\large\bf padasaMgarxha mADikoTiTxruva vidAvxMsarugaLu}
 
 \thispagestyle{empty}
 
@@ -11,11 +11,11 @@
 %\begin{longtable}{|r|p{10cm}|}
 \begin{longtable}{rl}
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
+{\bf karx.saM.} & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
 \hline
 \endfirsthead
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
+{\bf karx.saM.} & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
 \hline
   & \\[-10pt]
 \endhead
@@ -23,38 +23,38 @@
 \endfoot
 \endlastfoot
   & \\[-15pt]
-1 & aMbalimaTha, beMgaLUru\\
+1. & aMbalimaTha, beMgaLUru\\
 %\hline
-2 & anitA, beMgaLUru\\
-3 &  umApati esf., dAvaNagere\\
+2. & shirxVmati anitA, beMgaLUru\\
+3. & shirxV  umApati esf., dAvaNagere\\
 %\hline
-4 &  uSAkiraNf, beMgaLUru\\
+4. & shirxVmati uSAkiraNf, beMgaLUru\\
 %\hline
-5 &  uSAdeVvi si.ji., meYsUru\\
+5. & shirxVmati uSAdeVvi si.ji., meYsUru\\
 %\hline
-6 & karibasavarAjeVMdarx sAvxmiVji, baLALxri\\
+6. & shirxV karibasavarAjeVMdarx sAvxmiVji, baLALxri\\
 %\hline
-7 & guruliMgapapx dhabAle, akakxlakoVTe\\
-8 &  caMdarxyayx bi.naM., meYsUru\\
-9 &  caMdarxsheVKarayayx pi.enf., tumakUru\\
+7. & shirxV guruliMgapapx dhabAle, akakxlakoVTe\\
+8. & shirxV caMdarxyayx bi.naM., meYsUru\\
+9. & shirxV  caMdarxsheVKarayayx pi.enf., tumakUru\\
 %\hline
-10 & jagadiVshf bi.esf., beMgaLUru\\
-11 & jagalUru viVraBadarxyayxsAvxmi, meYsUru\\
+10. & shirxV jagadiVshf bi.esf., beMgaLUru\\
+11. & shirxV jagalUru viVraBadarxyayxsAvxmi, meYsUru\\
 %\hline
-12 & nAgarAjf eM.ji., beMgaLUru\\
+12. & shirxV nAgarAjf eM.ji., beMgaLUru\\
 %\hline
-13 &  nAgAbAyi bi buLALx, gulabagAR\\
+13. &  shirxV nAgAbAyi bi buLALx, gulabagAR\\
 %\hline
-14 & niraMjana bAbu, beMgaLUru\\
-15 & parxBusAvxmi, meYsUru\\
-16 &  pAvaRti pUjAra, kopapxLa\\
+14. & shirxV niraMjana bAbu, beMgaLUru\\
+15. & shirxV parxBusAvxmi, meYsUru\\
+16. & shirxVmati pAvaRti pUjAra, kopapxLa\\
 %\hline
-17 & pUjAra vihx.ji., gulabagAR\\
+17. & shirxV pUjAra vihx.ji., gulabagAR\\
 %\hline
-18 &  pUjAri bi.bi., solAlxpura\\
+18. & shirxV  pUjAri bi.bi., solAlxpura\\
 %\hline
-19 &  basavarAju koV.raM., tumakUru\\
-20 & bALapapx (shirxVmati) Arf.ePf.
+19. & shirxV  basavarAju koV.raM., tumakUru\\
+20. & bALapapx (shirxVmati) Arf.ePf.
 \end{longtable}}
 \end{minipage}
 \qquad\quad
@@ -63,11 +63,11 @@
 %\begin{longtable}{|r|p{10cm}|}
 \begin{longtable}{rl}
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
+{\bf karx.saM.} & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
 \hline
 \endfirsthead
 \hline
-{\bf karx.saM.} & \multicolumn{1}{c}{\bf vidAvxMsara hesaru}\\[3pt]
+{\bf karx.saM.} & \multicolumn{1}{c}{\bf hesaru}\\[3pt]
 \hline
   & \\[-10pt]
 \endhead
@@ -75,42 +75,42 @@
 \endfoot
 \endlastfoot
   & \\[-10pt]
-21 & maMjuLa bi.esf., tumakUru\\
+21. & shirxVmati maMjuLa bi.esf., tumakUru\\
 %\hline
-22 & mahAdeVvayayx Ti.Arf., beMgaLUru\\
+22. & shirxV mahAdeVvayayx Ti.Arf., beMgaLUru\\
 %\hline
-23 & maheVshavxrayayx ecf.eM., dhAravADa\\
+23. & shirxV  maheVshavxrayayx ecf.eM., dhAravADa\\
 %\hline
-24 & raGushaMKa BAtaMbArx, biVdarf\\
+24. & shirxV raGushaMKa, BAtaMbArx, biVdarf\\
 %\hline
-25 & raviVMdarxnAtha ke., haMpi\\
+25. & shirxV raviVMdarxnAtha ke., haMpi\\
 %\hline
-26 & rAjasheVKara icacxMgi, hukekxVri\\
+26. & shirxV rAjasheVKara icacxMgi, hukekxVri\\
 %\hline
-27 & viVraBadarxyayx ecf.vi., tumakUru\\
+27. & shirxV  viVraBadarxyayx ecf.vi., tumakUru\\
 %\hline
-28 & shAMtaviVrayayx hiV.ci., beMgaLUru\\
+28. & shirxV  shAMtaviVrayayx hiV.ci., beMgaLUru\\
 %\hline
-29 & shAMtA imArxpUra, dhAravADa\\
+29. & shirxVmati shAMtA imArxpUra, dhAravADa\\
 %\hline
-30 & shirUra bi.vihx., hubabxLiLx\\
+30. & shirxV shirUra bi.vihx., hubabxLiLx\\
 %\hline
-31 & shiVlAkumAri Di., meYsUru\\
+31. & shirxVmati shiVlAkumAri Di., meYsUru\\
 %\hline
-32 & sheYlaja ecf.Ti., meYsUru\\
+32. & shirxVmati sheYlaja ecf.Ti., meYsUru\\
 %\hline
-33 & saMgameVsha savadatitxmaTha, dhAravADa\\
+33. & shirxV saMgameVsha savadatitxmaTha, dhAravADa\\
 %\hline
-34 & sarasavxti ke.ecf., meYsUru\\
+34. & shirxVmati sarasavxti ke.ecf., meYsUru\\
 %\hline
-35 & saroVjamamxNiNx eM.si., meYsUru\\
+35. & shirxVmati saroVjamamxNiNx eM.si., meYsUru\\
 %\hline
-36 & sidadhxgaMgamamx ke.Arf., beLagAM\\
+36. & shirxVmati sidadhxgaMgamamx ke.Arf., beLagAM\\
 %\hline
-37 & sumaMgaLamamx esf., tumakUru\\
+37. & shirxVmati sumaMgaLamamx esf., tumakUru\\
 %\hline
-38 & suvaNaR bi.bi., shivamogagx\\
-39 &  selavxpapx, beMgaLUru\\
+38. & shirxVmati suvaNaR bi.bi., shivamogagx\\
+39. &  shirxV selavxpapx, beMgaLUru\\
 %\hline
 \end{longtable}}
 \end{minipage}
