prelims pages are sent to another proof

--- a/tex-for-print/anubandha-4.tex
+++ b/tex-for-print/anubandha-4.tex
@@ -37,16 +37,16 @@
 {\bf 14. u.garx.} & upaniSatasxMgarxhaH &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 15. u.ma.} & upaniSadAvxkayxmahAkoVshaH &-& shirxV gajAnana shaMBu sAdhale & cwKaMbA vidAyxBavana\newline vAraNAsi, 1990\\
 {\bf 16. u.vA.A.} & utatxra vAtUlAgamaH &-& & \\
-{\bf 17. Qu.veV.} & QugevxVdaH &-& veYdika saMshoVdhana maMDali & puNe\\
+{\bf 17. Qu.veV.} & QugevxVdaH &-& veYdika saMshoVdhana maMDali & puNe, 1941\\
 {\bf 18. ai.u.} & aitareVyoVpaniSatf &-& shirxVrAmakaqSANxsharxma & meYsUru, 1954 (nA.mu. 1984)\\
 {\bf 19. kaTha.u.} & kaThoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 %20. & kAraNAgama (kirxyApAda)\newline (hiMdiVBASAnuvAda sahita) &-& saM. porx. rAmacaMdarxpAMDeVya sheYva BAratiV shoVdha parxtiSAThxna, vArANasi, 1994\\
 {\bf 20. kA.A.ka.} & kAraNAgamaH (kirxyApAda)\newline (kananxDAnuvAda sahita) &-& DA. malilxkAjuRna paraDiDx & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 1999\\
 {\bf 21. kAmika.} & kAmikAgamaH\newline (shivAgama swraBAMtagaRta) &-& (saM.) vidAvxnf eM.ji. naMjuMDArAdhayx & ja.ca.ni. adhayxyana piVTha matutx saMshoVdhanA saMsethx\newline beMgaLUru, 1985\\
 {\bf 22. kA.ru.u.} & kAlAginxrudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 23. kA.vi.} & kAlidAsana vikarxmoVvaRshiVyamf &-& & \\
+{\bf 23. kA.vi.} & kAlidAsana vikarxmoVvaRshiVyamf &-& (saM) DA. eM. shivakumAra sAvxmi & parxsArAMga, beMgaLUru vishavxvidAyxlaya\newline beMgaLUru\\
 {\bf 24. ki.A.} & kiraNAgamaH\newline (taMtarxsaMgarxhaH) &-& hUTagiVmaTha & soVlApura, 1914\\
-{\bf 25. kU.pu.} & kUmaR purANamf &-& & \\
+{\bf 25. kU.pu.} & kUmaR purANamf &-& joVSi, ke.elf. shAsitxrX & parimaLa pabilxkeVSanfsx\newline navadehali\\
 {\bf 26. keV.u.} & keVnoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM.) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 27. keY.u.} & keYvaloyxVpaniSatf\newline (sadAshivaBASoyxVpeVta) &-& shirxV sadAshiva shivAcAyaRH & parxboVdha pusatxka mAlA, beMgaLUru\newline 1951\\
 {\bf 28. keY.sA.} & keYvalayxsAraH\newline (virakatxtoVMTadAyaR) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, 1988\\
@@ -58,7 +58,7 @@
 {\bf 33. jA.u.} & jAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 34. jAcnx.A.} & jAcnxnoVtatxrAgama &-& & \\
 {\bf 35. ta.parxkA.} & tatatxvXparxkAshikA\,(aGoVrashivAcAyaR)\newline (BoVjakaqtavAyxKAyxna) &-& vidAvxnf bi. rAjasheVKarayayx & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 2010\\
-{\bf 36. ta.parxdiV.} & tatatxvXparxdiVpikA\newline (sidAdhxMta shiKAmaNi saMsakxqqta vAyxKeyx) &-& (saM) DA. ecf. pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru\\
+{\bf 36. ta.parxdiV.} & tatatxvXparxdiVpikA\newline (sidAdhxMta shiKAmaNi saMsakxqqta vAyxKeyx) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
 {\bf 37. teV.u.} & teVjoVbiMdUpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 38. teY.A.} & teYtitxriVyAraNayxkamf &-& AnaMdAsharxma siVriVsf & puNe\\
 {\bf 39. teY.u.} & teYtitxriVyoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxV rAmakaqSANxsharxma\newline meYsUru, 1993\\
@@ -84,47 +84,47 @@
 {\bf 59. baq.jA.u.} & baqhajAjxbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 60. barx.u.} & barxhomxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 61. barx.pu.} & barxhAmxMDapurANamf &-& moVtilAla banArasidAsf pabilxSasfR & navadehali, 1983\\
-{\bf 62. barxsU.} & barxhamxsUtarxmf\newline (shirxVkaraBASayxmf) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya, meYsUru, BAga-1, 1977, BAga-2, 1978\\
+{\bf 62. barxsU.} & barxhamxsUtarxmf\newline (shirxVkaraBASayxmf) &-& (saM) DA. Ti.ji. sidadhxpApxrAdhayx & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, BAga-1, 1977, BAga-2, 1978\\
 {\bf 63. Ba.giV.} & BagavadigxVtA &-& giVtA perxsf & goVraKfpurf\newline 2008\\
 {\bf 64. Ba.jA.u.} & BasamxjAbAloVpaniSatf &-& {\rm The Shaiva Upanishads} & {\rm Adyar Library and Research Centre, Madras, 1988}\\
 {\bf 65. Ba.viV.BA.} & BagavadigxVtA viVrasheYvaBASayxmf &-& DA. Ti.ji. sidadhxpApxrAdhayx & baqhanamxTha\newline citarxdugaR, 1935\\
 {\bf 66. BA.pari.} & BAratiVyadashaRna pariBASAkoVsha\newline (BA-1) &-& veYjAcnxnika matutx tAMtirxka\newline shabAdxvaliV AyoVga & BArata sakARra\newline navadehali, 1999\\
 {\bf 67. makuTa.} & makuTAgamaH\newline (kirxyApAda-cayAR\-pAda)\newline (kananxDAnuvAda sahita) &-& (saM) DA. si. shivakumArasAvxmi & viVrasheYva anusaMdhAna saMsAthxna\newline beMgaLUru, 1998\\
 {\bf 68. ma.nA.u.} & mahAnArAyaNoVpaniSatf\newline (sheYvaBASayx sahita) &-& BASayx: shirxV vaqSaBeVMdarxpaMDita shivAcAyaR & vishAvxrAdhayx gurukula\newline kAshiV, 1959\\
-{\bf 69. ma.BA.} & mahABAratamf &-& giVtA perxsf & goVraKapura, visam. 2044\\
+{\bf 69. ma.BA.} & mahABAratamf &-& giVtA perxsf & goVraKapura, vi.saM. 2044\\
 {\bf 70. mahoV.u.} & mahoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 71. mAM.u.} & mAMDUkoyxVpaniSatf\newline (gwDapAdakArikoVpeVtA) &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1984\\
-{\bf 72. mAM.kA.} & mAMDUkayxkArikA &-& (saM) hari raGunAtha BAgavatf & aSeTxVkarf aMDf koV. puNe, 191\\
-{\bf 73. mAM.saM.} & mAdhayxMdina saMhitA &-& (saM) & \\
+{\bf 72. mAM.kA.} & mAMDUkayxkArikA &-& (saM) hari raGunAtha BAgavatf & aSeTxVkarf aMDf koV.\newline puNe, 1918\\
+{\bf 73. mAM.saM.} & mAdhayxMdina saMhitA &-& (saM) pAMDuraMga javAji & niNaRya sAgarf perxsf\newline muMbayi\\
 {\bf 74. muM.u.} & muMDakoVpaniSatf &-& sAvxmi AdideVvAnaMda & shirxVrAmakaqSANxsharxma\newline meYsUru, 1957\\
 {\bf 75. maq.A.} & maqgeVMdArxgamaH\newline (shivAgama swraBAMtagaRta) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
-{\bf 76. meYterxVya.} & meYterxVyoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 77. yoV.A.} & yoVgajAgamaH &-& & \\
+{\bf 76. meYterxVya.} & meYterxVyuyxpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
+{\bf 77. yoV.A.} & yoVgajAgamaH &-& ulelxVKa - tatatxvXparxdiVpikA\newline (maritoVMTadAyaRra si.shi. vAyxKAyxna) & pArxcayx vidAyx saMshoVdhanAlaya \newline meYsUru, 1995\\
 {\bf 78. yoV.pA.} & yoVgapAvaLi &-& & \\
-{\bf 79. yoV.su.} & yoVgasUtarxmf &-& & \\
+{\bf 79. yoV.su.} & yoVgasUtarxmf &-& rAmakaqSaNxmaTha & meYlApura\newline cenenxY, 2003\\
 {\bf 80. yoV.rA.u.} & yoVgarAjoVpaniSatf &-& & \\
 {\bf 81. yoVga.shi.} & yoVgashiKoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 82. ra.vaM.} & raGuvaMshamf (kAlidAsa) &-& niNaRyasAgara perxsf & muMbayi, 1932\\
 {\bf 83. ru.u.} & rudorxVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 84. ru.haq.u.} & rudarxhaqdayoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
-{\bf 85. rudarx.} & rudArxdhAyxyaH &-& & \\
+{\bf 85. rudarx.} & rudArxdhAyxyaH (yajuveRVda) &-& veYdika saMshoVdhana maMDala & puNe\\
 {\bf 86. rudarx.jA.u.} & rudArxkaSxjAbAloVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 87. liM.u.} & liMgoVpaniSatf\newline (upaniSatasxMgarxhaH) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1980\\
 {\bf 88. liM.dhA.caM.} & liMgadhAraNacaMdirxkA\newline (naMdikeVshavxra shivAcAyaR) &-& paM. varxjavalalxBa divxveVdi & sheYvaBArati shoVdha parxtiSAThxna, vArANasi\newline 1988\\
-{\bf 89. liM.pu.} & liMgapurANamf &-& & \\
-{\bf 90. leY.pu.} & leYMga purANamf &-& & \\
+{\bf 89. liM.pu.} & liMgapurANamf &-& puvAvxDa veMkaTarAyf & kAMciV, 1879\\
+{\bf 90. leY.pu.} & leYMga purANamf &-& puvAvxDa veMkaTarAyf & kAMciV, 1879\\
 {\bf 91. vA.A.} & vAtulAgamaH\newline (shivAgamaswraBa) &-& vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1986\\
-{\bf 92. vA.kAM.} & vAdakAMDaH &-& & \\
-{\bf 93. vAja.saM.} & vAjasaneVyiV saMhitA &-& & \\
-{\bf 94. vA.shu.A.} & vAtulashudAdhxgamaH &-& & \\
-{\bf 95. vA.saM.} & vAyaviVyasaMhitA &-& & \\
-{\bf 96. videyxV.saM.} & videyxVshavxrasaMhitA &-& & \\
+{\bf 92. vA.kAM.} & vAdakAMDaH\newline (viVrasheYvAnaMda caMdirxke) &-& shirxV soVmeVshavxra shAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAle\newline hubabxLiLx, 1936\\
+{\bf 93. vAja.saM.} & vAjasaneVyiV saMhitA\newline (sakxMda purANAMtagaRta) &-& sAvxdhAyxya maMDali  & paraDi, mahArASaTxrX\\
+{\bf 94. vA.shu.A.} & vAtulashudAdhxgamaH (BAga-2) &-& DA. hecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1983\\
+{\bf 95. vA.saM.} & vAyaviVyasaMhitA\newline (sakxMda purANAMtagaRta) &-& KeVmarAja kaqSaNxdAsf & muMbayi, 1965\\
+{\bf 96. videyxV.saM.} & videyxVshavxrasaMhitA\newline (sakxMda purANAMtagaRta) &-& KeVmarAja kaqSaNxdAsf & muMbayi, 1965\\
 {\bf 97. visheV.parx.} & visheVSAthaR parxkAshikA (mAyideVva)\newline (kananxDAnuvAda sahita) &-& (saM) paM. veY. nAgeVsha shAsitxrXV & shirxV muruGAmaTha\newline dhAravADa, 1961\\
 {\bf 98. viV.A.u.} & viVrAgamoVtatxramf (BAga-1) &-& (saM) DA. ecf.pi. malelxVdeVvaru & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru, 1988\\
-{\bf 99. viV.A.kw.} & viVrasheYvAcAra kwsutxBaH &-& & \\
+{\bf 99. viV.A.kw.} & viVrasheYvAcAra kwsutxBaH\newline (mwnapapx paMDita) &-& hasatxparxti, saM. pi. 7352 & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
 {\bf 100. viV.A.caM.} & viVrasheYvAnaMdacaMdirxkA (vAdakAMDa)\newline (maritoVMTadAyaR) &-& (saM) shirxV soVmeVshavxra shAsitxrXV & shirxV jagadugxru gaMgAdhara saMsakxqqta mahApAThashAlA\newline hubabxLiLx, 1936\\
 {\bf 101. viV.A.ci} & viVrasheYvAcAraciMtAmaNiH &-& & \\
-{\bf 102. viV.A.parx.} & viVrasheYvAcAraparxdiVpikA &-& & \\
+{\bf 102. viV.A.parx.} & viVrasheYvAcAraparxdiVpikA\newline (gurudeVva) &-& hasatxparxti saM. si.25 75/1 & pArxcayx vidAyx saMshoVdhanAlaya\newline meYsUru\\
 {\bf 103. viV.u.parx.} & viVrasheYvoVtakxSaRparxdiVpikA &-& hAlapaTaTxNada cenanxbasavasAvxmi & \hbox{shirxV duraduMDeVshavxra}\-maTha, araBAvi\newline beLagAvi jilelx\newline 1936\\
 {\bf 104. viV.dha.shi.} & viVrasheYvadhamaRshiroVmaNiH\newline (kananxDa vAyxKAyxnasahita) &-& (vAyx) eM. basavaliMga shAsitxrXV & viVrasheYvagarxMtha parxkAshikA garxMthAvali\newline meYsUru, 1908\\
 {\bf 105. viV.pu.} & viVraBadarxpurANamf &-& & \\
@@ -136,26 +136,26 @@
 {\bf 111. viV.sheY.u.} & viVrasheYvoVpaniSatf &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1981 (ELaneya Avaqtitx)\\
 {\bf 112. viV.sa.saM.} & viVrasheYva sadAcAra saMgarxha\newline (kananxDAnuvAda sahita) &-& (saM) paM. basavarAjashAsitxrXV pagaDadininxmaTha & shirxV jagadugxru garxMtha parxkAshikA garxMthAvali\newline mUrusAvira maTha\newline hubabxLiLx, 1964\\
 {\bf 113. veV.ciM.} & veVdAMtaciMtAmaNiH &-& & \\
-{\bf 114. veV.sA.u.} & veVdAMtasAroVpaniSatf &-& & \\
+{\bf 114. veV.sA.u.} & veVdAMtasAroVpaniSatf\newline (sheYvoVpaniSatasxMgarxhaH) &-& paM. kALiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1948 (divxtiVyAvaqtitx)\\
 {\bf 115. veV.sA.viV.caM.} & veVdAMtasAraviVrasheYvaciMtAmaNi\newline (utatxrakAMDa) - (niTUTxru naMja\-NAyaR) (marAThi anuvAda sahita) &-& (saM) shirxV malilxkAjuRna shAsitxrXV & shirxV datatxparxsAda siTxVmf perxsf\newline soVlApura, 1908\\
-{\bf 116. veY.shiva.} & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR mudarxNAlaya\newline meYsUru, 1980 (eMTaneya Avaqtitx)\\
-{\bf 117. shaM.saM.} & shaMkarasaMhitA &-& & \\
+{\bf 116. veY.shiva.} & veYdika shivapUjA vidhi &-& paM. kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1980 (eMTaneya Avaqtitx)\\
+{\bf 117. shaM.saM.} & shaMkarasaMhitA\newline (sakxMdapurANaMtagaRta) &-& (saM) KeVmarAja shirxVkaqSaNxdAsf & muMbayi, vi.saM. 1935\\
 {\bf 118. sha.u.} & sharaBoVpaniSatf\newline (upaniSatasxMgarxha) &-& (saM) paM. jagadiVsha shAsitxrXV & moVtilAla banArasidAsf\newline dehali, 1970\\
 {\bf 119. sha.kw.} & shabAdxthaRkwsutxBaH\newline (saMsakxqqta-kananxDa niGaMTu)\newline (BAga 1-6) &-& cakarxvatiR shirxVnivAsa rAjagoVpAlAcAyaR & bApokxV parxkAshana\newline beMgaLUru, 1999\\
 {\bf 120. shakitx.vi.} & shakitxvishiSATxdevxYta tatatxvXtarxya vimasheR\newline (kananxDAnuvAda) &-& DA. si. shivakumArasAvxmi & rAjayx patArxgAra ilAKe (kanARTaka sakARra)\newline beMgaLUru, 2009\\
 {\bf 121. shata.tarx.} & shatakatarxyamf (mAyideVva) &-& paM. veY. nAgeVsha shAsitxrXV & muruGAmaTha\newline dhAravADa, 1964\\
 {\bf 122. sha.vi.da.} & shakitxvishiSATxdevxYtadashaRnamf &-& DA. Ti.ji. sidadhxpApxrAdhayx & gubibx shirxV cenanxbasaveVshavxra garxMthamAlA\newline meYsUru, 1934\\
-{\bf 123. shA.BA.} & shAMkaraBASayxmf &-& &\\
+{\bf 123. shA.BA.} & shAMkaraBASayxmf\newline (barxhamxsUtarx) &-& niNaRya sAgarf perxsf & muMbayi, 1909\\
 {\bf 124. shi.ta.ra.} & shivatatatxvXratAnxkaraH\newline (keLadi basavaBUpAla) &-& pArxcayx vidAyx saMshoVdhanAlaya & meYsUru, BAga-1 (1964), BAga-2 (1969), BAga-3 (1975)\\
-{\bf 125. shi.da.} & shivAdevxYtadapaRNaH &-& &\\
+{\bf 125. shi.da.} & shivAdevxYtadapaRNaH\newline (kananxDAnuvAda sahita) &-& (1) pUvalilxV baqhanamxTha garxMthamAle, hUli, 1928\newline (2) vidAvxnf bi. rAjasheVKarayayx & shirxV jagadugxru raMBApuriVshavxra garxMtha parxkAshana\newline hubabxLiLx, 2017\\
 {\bf 126. shi.maM.} & shivAdevxYtamaMjariV \hbox{(savxparxBAnaMda shivAcAyaR)}\newline (kananxDa vAyxKAyxnasahita) &-& shirxV rAmAnuja ayayxMgArf & paMcAcAyaR perxsf\newline meYsUru, 1929\\
-{\bf 127. shi.mA.pU} & shivamAnasapUjAsotxVtarxmf &-& \\
+{\bf 127. shi.mA.pU} & shivamAnasapUjAsotxVtarxmf\newline (shaMkarAcAyaR viracita) &-& veYdika shivapUjA vidhi, kAshiVnAtha shAsitxrXV & paMcAcAyaR perxsf\newline meYsUru, 1988\\
 {\bf 128. shi.yoV.parx.} & shivayoVgaparxdiVpikA\newline (\hbox{cenanxsadAshiva\-yoVgi})\newline (kananxDa TiVkAsahita) &-& TiVkAkAra: basavArAdhayx & kananxDa adhayxyana piVTha, kanARTaka vishavxvidAyxlaya\newline dhAravADa, 1976\\
 {\bf 129. shi.ra.} & shivarahasayxmf &-& &\\
 {\bf 130. shiva.shi.} & shivAdhikayxshiKAmaNiH\newline (soVsale \hbox{reVvaNArAdhayx}) &-& (saM) shirxV soVmasheVKarasAvxmi & namaHshivAya maTha\newline meYsUru, 1929\\
 {\bf 131. shivA.sw.} & shivAgamaswraBamf  &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & shirxV ja.ca.ni. adhayxyana piVTha, beMgaLUru\newline 1985\\
-{\bf 132. shi.sU.} & shivasUtarxmf &-& &\\
-{\bf 133. shu.ya.veV.} & shukalxyajuveVRdaH &-& &\\
+{\bf 132. shi.sU.} & shivasUtarxmf &-& kAshimxVra saMsakxqqta garxMthAvali & shirxVnagara, 1968\\
+{\bf 133. shu.ya.veV.} & shukalxyajuveVRdaH &-& veYdika saMshoVdhana maMDaLi & puNe\\
 {\bf 134. sheY.i.ta.} & \hbox{sheYvadashaRna itihAsa matutx}\newline tatatxvXparxkAsha (BoVjarAja viracita) &-& (saM) vidAvxnf eM.ji. naMjuMDArAdhayx & parxboVdha garxMthamAlA\newline meYsUru, 1974\\
 {\bf 135. sheY.u.} & sheYvoVpaniSatf &-& (saM) paM. mahAdeVvashAsitxrXV & aDAyxrf leYbarxri\newline madArxsf, 1925\\
 {\bf 136. sheY.pa.} & sheYvapariBASA\newline (shivAgarxyoVgiVMdarxjAcnxna\newline shivAcAyaR) &-& (saM) ecf.Arf. raMgasAvxmi ayayxMgArf & sakARri mudarxNAlaya\newline meYsUru, 1950\\
@@ -266,11 +266,13 @@
 %\end{longtable}}
 \bigskip
 
+\newpage
+
 \centerline{\bf u}
 
 \medskip
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -292,7 +294,7 @@
 \centerline{\bf e}
 
 \medskip
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8.2cm}l}
 %\hline
 \endfirsthead
@@ -311,7 +313,7 @@
 \centerline{\bf E}
 
 \medskip
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -330,7 +332,7 @@
 
 \medskip
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -346,7 +348,7 @@
 \centerline{\bf ka}
 \smallskip
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -377,12 +379,12 @@
 47. &  koVlashAM - savasaM & koVla shAMtayayxna vacanagaLu & samagarx saMpuTa - 7
 %\hline
 \end{longtable}}
-\medskip
+\smallskip
 
 \centerline{\bf ga}
 \medskip
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -406,12 +408,11 @@
 59. &  goVrakaSx - savasaM & goVrakaSxna vacanagaLu & samagarx saMpuTa - 7
 %\hline
 \end{longtable}}
-
-\medskip
+\smallskip
 
 \centerline{\bf Ga}
 
-{\renewcommand{\arraystretch}{1.32}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -429,7 +430,7 @@
 
 \centerline{\bf ca}
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -452,7 +453,7 @@
 
 \centerline{\bf da}
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -472,7 +473,7 @@
 
 \centerline{\bf na}
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -492,7 +493,7 @@
 
 \centerline{\bf pa}
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -511,7 +512,7 @@
 
 \centerline{\bf ba}
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -536,7 +537,7 @@
 
 \centerline{\bf ma}
 
-{\renewcommand{\arraystretch}{1.35}
+{\renewcommand{\arraystretch}{1.3}
 \begin{longtable}{>{\bf}r>{\bf}l>{\raggedright}p{8cm}l}
 %\hline
 \endfirsthead
@@ -619,7 +620,8 @@
 116. & veYdayxsaM - savasaM &  veYdayx saMgaNaNxna vacanagaLu & samagarx saMpuTa - 9
 %\hline
 \end{longtable}}
-\smallskip
+
+\newpage
 
 \centerline{\bf sha}
 
@@ -709,7 +711,7 @@
 \end{center}
 
 
-{\renewcommand{\arraystretch}{1.5}
+{\renewcommand{\arraystretch}{1.45}
 \begin{longtable}{>{\bf}lp{4.2cm}p{4.2cm}<{\raggedright}p{4.2cm}<{\raggedright}@{}}
 %\begin{longtable}{l>{\raggedright}p{7cm}l}
 \hline
